# slovjanskirl

./: .gitignore  LICENSE  README.md  plaintypes.txt
assets/data/: isv_animals.csv  isv_materials.csv  isv_plants.csv  isv_weapons.csv
assets/fonts/data/: isv_clothing.csv  isv_furniture.csv  isv_plants.csv
client/: Cargo.toml
client/src/: main.rs
isvdata/: crafting_materials.json  definitions.json  items.json  mojjezyk.txt  pennpaper  randomnotes  s4  spsl.json  test.ron  types.json
my_display_macro/: Cargo.toml
my_display_macro/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
slov_client/: Cargo.toml
slov_client/src/: main.rs
slov_common/: Cargo.toml
slov_common/examples/: lol.rs
slov_common/src/: actions.rs  components.rs  csv_structs.rs  interslavic.rs  item_impls.rs  item_monads.rs  item_types.rs  lib.rs  server_stuff.rs  terrain.rs  typedefs.rs  voxel.rs  world.rs
slov_server/: Cargo.toml
slov_server/src/: main.rs
slov_text/: Cargo.toml
slov_text/src/: main.rs
srl_common/: Cargo.toml
srl_common/examples/: lol.rs
srl_common/src/: actions.rs  components.rs  lib.rs  server_stuff.rs  terrain.rs  typedefs.rs  voxel.rs  world.rs
trash/: Cargo.toml
trash/src/: actions.rs  client.rs  components.rs  entitytype.rs  lib.rs  server.rs  typedefs.rs  voxel.rs  voxeltype.rs  world.rs
