[package]
name = "slov_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
bevy_egui = "0.27.0"
bevy_rtc = { version = "0.3.1", features = ["server"] }
ratatui = { version = "0.26.2", default-features = false }
ratframe = {version = "1.1.4", default-features = false}
serde = "1.0.200"
#disable defaults features for rat frame if you do not want to import eframe

slov_common = { path = "../slov_common" }
