[package]
name = "slov_text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
bevy_egui = { version = "0.27.1", default-features = false , features = ["render"]  }


ratatui = { version = "0.26.2", default-features = false }
egui_ratatui = {version = "0.0.4"}





