
[package]
name = "srl_common"
version = "0.1.0"
edition = "2021"
description = "srl common"
license = "MIT OR Apache-2.0"

exclude = ["assets/*", ".github", "Makefile.toml", "*.log", "tags"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.26.2"
rstar = { git = "https://github.com/georust/rstar.git", branch = "master" }
serde = "1.0.200"



[[example]]
name = "lol"
doc-scrape-examples = false