
[package]
name = "scratch"
version = "0.1.0"
edition = "2021"
description = "scratch rs "
license = "MIT OR Apache-2.0"

exclude = ["assets/*", ".github", "Makefile.toml", "*.log", "tags"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
rstar = { git = "https://github.com/georust/rstar.git", branch = "master" }
rust_socketio = "0.5.0"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }

#interslavic = { path = "../interslavic-rs" }


tracing = "0.1.40"

tower = "0.4.13"
tower-http = "0.5.2"
tracing-subscriber = "0.3.18"
socketioxide = "0.11.0"
anyhow = "1.0.81"
ratatui = "0.26.1"
remove = "0.1.3"
crossterm = "0.27.0"


[[example]]
name = "mpclient"
doc-scrape-examples = true


[[example]]
name = "mpserver"
doc-scrape-examples = true
